; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_oper.c_find_oper_cache_entry.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_oper.c_find_oper_cache_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { i32, i32 }

@OprCacheHash = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [22 x i8] c"Operator lookup cache\00", align 1
@HASH_ELEM = common dso_local global i32 0, align 4
@HASH_BLOBS = common dso_local global i32 0, align 4
@OPERNAMENSP = common dso_local global i32 0, align 4
@InvalidateOprCacheCallBack = common dso_local global i32 0, align 4
@CASTSOURCETARGET = common dso_local global i32 0, align 4
@HASH_FIND = common dso_local global i32 0, align 4
@InvalidOid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @find_oper_cache_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_oper_cache_entry(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca %struct.TYPE_6__, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** @OprCacheHash, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %22

8:                                                ; preds = %1
  %9 = call i32 @MemSet(%struct.TYPE_6__* %5, i32 0, i32 8)
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  store i32 4, i32* %10, align 4
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 1
  store i32 4, i32* %11, align 4
  %12 = load i32, i32* @HASH_ELEM, align 4
  %13 = load i32, i32* @HASH_BLOBS, align 4
  %14 = or i32 %12, %13
  %15 = call i32* @hash_create(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 256, %struct.TYPE_6__* %5, i32 %14)
  store i32* %15, i32** @OprCacheHash, align 8
  %16 = load i32, i32* @OPERNAMENSP, align 4
  %17 = load i32, i32* @InvalidateOprCacheCallBack, align 4
  %18 = call i32 @CacheRegisterSyscacheCallback(i32 %16, i32 %17, i32 0)
  %19 = load i32, i32* @CASTSOURCETARGET, align 4
  %20 = load i32, i32* @InvalidateOprCacheCallBack, align 4
  %21 = call i32 @CacheRegisterSyscacheCallback(i32 %19, i32 %20, i32 0)
  br label %22

22:                                               ; preds = %8, %1
  %23 = load i32*, i32** @OprCacheHash, align 8
  %24 = load i32*, i32** %3, align 8
  %25 = bitcast i32* %24 to i8*
  %26 = load i32, i32* @HASH_FIND, align 4
  %27 = call i64 @hash_search(i32* %23, i8* %25, i32 %26, i32* null)
  %28 = inttoptr i64 %27 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %28, %struct.TYPE_5__** %4, align 8
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %30 = icmp eq %struct.TYPE_5__* %29, null
  br i1 %30, label %31, label %33

31:                                               ; preds = %22
  %32 = load i32, i32* @InvalidOid, align 4
  store i32 %32, i32* %2, align 4
  br label %37

33:                                               ; preds = %22
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  store i32 %36, i32* %2, align 4
  br label %37

37:                                               ; preds = %33, %31
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}

declare dso_local i32 @MemSet(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i32* @hash_create(i8*, i32, %struct.TYPE_6__*, i32) #1

declare dso_local i32 @CacheRegisterSyscacheCallback(i32, i32, i32) #1

declare dso_local i64 @hash_search(i32*, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
